--- a/FrontEnd/ApoiaTurismo/package.json
+++ b/FrontEnd/ApoiaTurismo/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
     "ngx-bootstrap": "^7.1.0",
+    "ngx-order-pipe": "^2.2.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
